Fix wrong overflow management in custom panels

--- a/src/stylesheets/components/_navbar.scss
+++ b/src/stylesheets/components/_navbar.scss
@@ -60,5 +60,4 @@
 
 .espcontainer {
     position: relative;
-    overflow-y: auto;
 }
